# aliaro-accessory-board-python-support

./: .gitignore  README.md  pyproject.toml
accessoryboards/: __init__.py  accessory_board.py  board_config.py  connection_key.py  exceptions.py
accessoryboards/boardcontrollers/: board_controller.py  i2cdriver_board_controller.py  simulated_board_controller.py
accessoryboards/examples/: 32ch_instrumentation_switch.py  connect_disconnect.py  initialize.py  reset.py
accessoryboards/examples/exceptions/: exclusive_connection_conflict.py  invalid_channel.py  path_unsupported.py  resource_in_use.py  source_conflict.py
aliaro-mux-control/: MuxClient.py
aliaroaccessoryboards/: __init__.py  accessory_board.py  board_config.py  board_controller.py  exceptions.py  switch_config.py
aliaroaccessoryboards/boardcontrollers/: board_controller.py  i2cdriver_board_controller.py  simulated_board_controller.py
aliaroaccessoryboards/boards/: 32ch_instrumentation_switch.brd  al1032_inline_fiu.brd  instrumenation_switch.py  instrumentation_switch.brd  instrumentation_switch.top  instrumentationswitch.top
aliaroaccessoryboards/examples/: 32ch_instrumentation_switch.py  change_board_address.py  connect_disconnect.py  error_handling.py  example.top  initialize.py  reset.py
aliaroinstrumentationswitchapi/: aliaro_instrumentation_switch_api.py
tests/: shared.py  test_accessory_board.py  test_accessory_board_exceptions.py  test_board_config.py  test_board_controller.py  test_i2cdriver_board_controller.py  test_simulated_board_controller.py
(+6 files in other folders)
