[tool.poetry]
name = "aliaro-accessory-boards"
version = "0.1.0"
description = ""
authors = ["Leonard Bagiu <leonard.bagiu@aliaro.com>", "Tanner Blair <tanner.blair@aliaro.com"]
readme = "README.md"
packages = [
    { include = "aliaroaccessoryboards" }
]

[tool.poetry.dependencies]
python = "^3.9"
aliaro-i2c-device-control = "^0.1.0"
pyyaml = "^6.0.2"
pydantic = "^2.10.6"
pydantic-yaml = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.12"
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
